WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120681
REGRESSION(
r154977
): Do not urlencode soup message on ResourceRequest::toSoupMessage()
https://bugs.webkit.org/show_bug.cgi?id=120681
Summary
REGRESSION(r154977): Do not urlencode soup message on ResourceRequest::toSoup...
Andre Moreira Magalhaes
Reported
2013-09-04 07:38:30 PDT
This accidentally regressed in
http://trac.webkit.org/changeset/154977
because the old code behaved correctly when toSoupMessage was called.
Attachments
Patch
(4.81 KB, patch)
2013-09-04 07:47 PDT
,
Andre Moreira Magalhaes
gtk-ews
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.81 KB, patch)
2013-09-04 09:21 PDT
,
Andre Moreira Magalhaes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andre Moreira Magalhaes
Comment 1
2013-09-04 07:47:03 PDT
Created
attachment 210458
[details]
Patch
kov's GTK+ EWS bot
Comment 2
2013-09-04 07:58:28 PDT
Comment on
attachment 210458
[details]
Patch
Attachment 210458
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1697288
EFL EWS Bot
Comment 3
2013-09-04 08:10:33 PDT
Comment on
attachment 210458
[details]
Patch
Attachment 210458
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/1685622
EFL EWS Bot
Comment 4
2013-09-04 08:12:20 PDT
Comment on
attachment 210458
[details]
Patch
Attachment 210458
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/1695468
Andre Moreira Magalhaes
Comment 5
2013-09-04 09:21:57 PDT
Created
attachment 210469
[details]
Patch Updated patch that actually builds (I blame slow builds :D). What happened is that the buildbot failed for media fragments tests on
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/40360
(78 failures over 50 failures on build 40359, all 28 new failures on media fragments tests) with only the changeset from
http://trac.webkit.org/changeset/154977
. What I find strange is that all media fragments tests work fine here with and without this new patch to fix the regression (same results): $ Tools/Scripts/run-webkit-tests --no-new-test-results --debug-rwt-logging --no-sample-on-timeout --webkit-test-runner LayoutTests/media/media-fragments/ --debug --gtk --iteration=1 ... => Results: 68/68 tests passed (100.0%) So, not sure what is happening with the buildbot failures.
Martin Robinson
Comment 6
2013-09-04 10:02:18 PDT
This probably needs a test or to unskip a test.
Zan Dobersek
Comment 7
2013-09-04 10:42:45 PDT
It fixes a bunch of media fragment failures on the builders that regressed with
r154977
. The patch is also just extracting duplicated code into a single method.
Martin Robinson
Comment 8
2013-09-04 10:44:05 PDT
(In reply to
comment #7
)
> It fixes a bunch of media fragment failures on the builders that regressed with
r154977
. The patch is also just extracting duplicated code into a single method.
So the tests are failing now or are they skipped?
Zan Dobersek
Comment 9
2013-09-04 10:45:14 PDT
Now.
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r155047%20(40401)/results.html
Andre Moreira Magalhaes
Comment 10
2013-09-04 10:49:26 PDT
(In reply to
comment #9
)
> Now. >
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r155047%20(40401)/results.html
Point is they don't fail here (local) even without this patch, wonder why :/. In any case I think this patch is correct and restores the behaviour of toSoupMessage (apart from also updating the message to respect acceptEncoding) before the changeset that caused the regressions.
Martin Robinson
Comment 11
2013-09-04 10:49:58 PDT
Comment on
attachment 210469
[details]
Patch Let's do this thing.
WebKit Commit Bot
Comment 12
2013-09-04 10:52:58 PDT
Comment on
attachment 210469
[details]
Patch Clearing flags on attachment: 210469 Committed
r155049
: <
http://trac.webkit.org/changeset/155049
>
WebKit Commit Bot
Comment 13
2013-09-04 10:53:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug